--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,101 @@
-h1 {
-    color: red;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* <uniquifier>: Use a unique and descriptive class name
+<weight>: Use a value from 400 to 900 */
+@font-face {
+    .playfair-display {
+        font-family: "Playfair Display", serif;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
+      }
+
+      .roboto-regular {
+        font-family: "Roboto", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+      }
+}
+
+
+body {
+    font-family: 'Roboto';
+    margin: 0 auto;
+}
+
+
+.header-background {
+    background-color: rgb(71, 171, 204);
+    
+    height: 650px;
+    width: 100%;
+    position: absolute;
+    z-index: -1;
+    transform: skewY(-12deg);
+    transform-origin: top left;
+
+}
+
+header {
+    
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+figure {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.man-at-computer {
+    
+    background-image: url('./man-at-computer.jpg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 18rem;
+    
+    box-shadow: 5px 10px 15px gray;
+}
+
+.abt-me-caption {
+    font-family: "playfair display";
+    bottom: 1rem;
+    position: absolute;
+    /* background-color: rgba(128, 128, 128, 0.788); */
+    color: white;
+    font-size: 3rem;
+    align-self: center;
+    
+}
+
+.abt-me-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1.2rem;
+    background-color: white;
+    max-width: 500px;
+    padding: 2rem 2rem 1rem 2rem;
+    align-self: center;
+    box-shadow: 5px 10px 15px gray;
+}
+
+.abt-me-title {
+    font-family: "playfair display";
+}
+.abt-me-para {
+    line-height: 1.5rem;
+}
+
+.icon-container {
+    cursor: pointer;
+    display: flex;
+    justify-content: flex-end;
+    gap: 1rem;
 }
