--- a/src/styles.css
+++ b/src/styles.css
@@ -25,13 +25,19 @@
 body {
     font-family: 'Roboto';
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
 }
+
+
 
 
 .header-background {
     background-color: rgb(71, 171, 204);
     
-    height: 650px;
+    height: 500px;
     width: 100%;
     position: absolute;
     z-index: -1;
@@ -39,12 +45,26 @@ body {
     transform-origin: top left;
 
 }
-
+.page-content {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    max-width: 800px;
+    margin:  3rem;
+    
+}
 header {
     
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+}
+
+.header-content {
+    display: flex;
+    justify-content: center;
+    
+    
 }
 
 figure {
@@ -80,7 +100,7 @@ figure {
     flex-direction: column;
     gap: 1.2rem;
     background-color: white;
-    max-width: 500px;
+    
     padding: 2rem 2rem 1rem 2rem;
     align-self: center;
     box-shadow: 5px 10px 15px gray;
@@ -99,3 +119,115 @@ figure {
     justify-content: flex-end;
     gap: 1rem;
 }
+
+.my-work-header {
+    font-family: 'playfair display';
+    font-size: 2rem;
+}
+
+.main-content {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.projects-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 1rem;
+    list-style: none;
+    
+}
+
+.projects-container li {
+    
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    
+    gap: 1rem;
+    box-shadow: 5px 10px 15px gray;
+
+}
+
+.project-image {
+    text-align: center;
+    align-self: center;
+    width: 100%;
+    height: 150px;
+    border: 1px solid black;
+}
+
+.project-names {
+    font-family: 'fairplay display';
+    font-size: 1.2rem;
+}
+
+.project-details-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: .5rem 1rem 1rem 1rem;
+}
+.name-and-icons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-background {
+    display: flex;
+    justify-content: center;
+    
+    background-color: rgb(71, 171, 204);
+    width: 100%;
+    
+}
+
+.footer-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    max-width: 800px;
+    margin:  3rem;
+    gap: 2rem;
+    color: #D9D9D9;
+}
+
+.contact-title {
+    font-family: 'fairplay display';
+    font-size: 2rem;
+}
+
+.contact-info-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    list-style: none;
+}
+
+.footer-info-section {
+   display: flex;
+   flex-direction: column;
+   gap: 1rem;
+}
+
+.info-and-icon {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.footer-img {
+    width: 500px;
+    height: 300px;
+    object-fit: cover;
+    
+}
+
+.footer-icon-container {
+    display: flex;
+    gap: 1rem;
+}
+
