--- a/src/styles.css
+++ b/src/styles.css
@@ -1,25 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/* <uniquifier>: Use a unique and descriptive class name
-<weight>: Use a value from 400 to 900 */
-@font-face {
-    .playfair-display {
-        font-family: "Playfair Display", serif;
-        font-optical-sizing: auto;
-        font-weight: 400;
-        font-style: normal;
-      }
 
-      .roboto-regular {
-        font-family: "Roboto", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-      }
-}
 
 
 body {
@@ -41,7 +27,7 @@ body {
     width: 100%;
     position: absolute;
     z-index: -1;
-    transform: skewY(-12deg);
+    transform: skewY(-8deg);
     transform-origin: top left;
 
 }
@@ -49,7 +35,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 3rem;
-    max-width: 800px;
+    max-width: 940px;
     margin:  3rem;
     
 }
@@ -142,7 +128,7 @@ figure {
 
 .projects-container li {
     
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
     flex-direction: column;
     
@@ -152,11 +138,37 @@ figure {
 }
 
 .project-image {
-    text-align: center;
-    align-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 150px;
-    border: 1px solid black;
+    
+}
+
+.proj1 {
+    background-color: lightcoral;
+}
+
+.proj2 {
+    background-color: lightgreen;
+}
+
+.proj3 {
+    background-color: lightslategray; 
+}
+
+.proj4 {
+    background-color: aquamarine;
+}
+
+.proj5 {
+    background-color: lightsalmon;
+}
+
+.proj6 {
+    background-color: lightpink;
+
 }
 
 .project-names {
@@ -168,8 +180,13 @@ figure {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding: .5rem 1rem 1rem 1rem;
+    padding: 0 1rem 3rem 1rem;
 }
+
+.project-descript {
+    font-family: 'Roboto';
+}
+
 .name-and-icons {
     display: flex;
     justify-content: space-between;
@@ -189,7 +206,7 @@ figure {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    max-width: 800px;
+    max-width: 940px;
     margin:  3rem;
     gap: 2rem;
     color: #D9D9D9;
