--- a/src/styles.css
+++ b/src/styles.css
@@ -1,250 +1,336 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-
-
 
 body {
-    font-family: 'Roboto';
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
+  font-family: "Roboto";
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
-
-
 
 .header-background {
-    background-color: rgb(71, 171, 204);
-    
-    height: 500px;
-    width: 100%;
-    position: absolute;
-    z-index: -1;
-    transform: skewY(-8deg);
-    transform-origin: top left;
+  background-color: rgb(71, 171, 204);
 
+  height: 400px;
+  width: 100%;
+  position: absolute;
+  z-index: -1;
+  transform: skewY(-8deg);
+  transform-origin: top left;
 }
 .page-content {
-    display: flex;
-    flex-direction: column;
-    gap: 3rem;
-    max-width: 940px;
-    margin:  3rem;
-    
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  max-width: 940px;
+  margin: 3rem;
 }
+
 header {
-    
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.header-content {
-    display: flex;
-    justify-content: center;
-    
-    
-}
-
-figure {
-    margin-top: 10px;
-    display: flex;
-    flex-direction: column;
-    position: relative;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .man-at-computer {
-    
-    background-image: url('./man-at-computer.jpg');
-    background-repeat: no-repeat;
-    background-size: contain;
-    width: 18rem;
-    
-    box-shadow: 5px 10px 15px gray;
+  background-repeat: no-repeat;
+  background-size: contain;
+  max-width: 100%;
+
+  box-shadow: 5px 10px 15px gray;
 }
 
 .abt-me-caption {
-    font-family: "playfair display";
-    bottom: 1rem;
-    position: absolute;
-    /* background-color: rgba(128, 128, 128, 0.788); */
-    color: white;
-    font-size: 3rem;
-    align-self: center;
-    
+  font-family: "playfair display";
+
+  color: white;
+  font-size: 3rem;
 }
 
 .abt-me-container {
-    display: flex;
-    flex-direction: column;
-    gap: 1.2rem;
-    background-color: white;
-    
-    padding: 2rem 2rem 1rem 2rem;
-    align-self: center;
-    box-shadow: 5px 10px 15px gray;
+  background-color: white;
+
+  padding: 2rem 2rem 1rem 2rem;
+
+  box-shadow: 5px 10px 15px gray;
 }
 
 .abt-me-title {
-    font-family: "playfair display";
+  font-family: "playfair display";
+  margin-bottom: 0.7rem;
 }
 .abt-me-para {
-    line-height: 1.5rem;
+  line-height: 1.5rem;
+  margin-bottom: 1rem;
 }
 
+.icon-container img {
+  cursor: pointer;
+}
 .icon-container {
-    cursor: pointer;
-    display: flex;
-    justify-content: flex-end;
-    gap: 1rem;
+  display: flex;
+  justify-content: flex-end;
+  gap: 1rem;
 }
 
 .my-work-header {
-    font-family: 'playfair display';
-    font-size: 2rem;
+  font-family: "playfair display";
+  font-size: 2rem;
 }
 
 .main-content {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .projects-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 1rem;
-    list-style: none;
-    
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 1rem;
+  list-style: none;
 }
 
 .projects-container li {
-    
-    /* border: 1px solid black; */
-    display: flex;
-    flex-direction: column;
-    
-    gap: 1rem;
-    box-shadow: 5px 10px 15px gray;
+  /* border: 1px solid black; */
+  display: flex;
+  flex-direction: column;
 
+  gap: 1rem;
+  box-shadow: 5px 10px 15px gray;
 }
 
 .project-image {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 150px;
-    
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 100%;
+  height: 150px;
 }
 
 .proj1 {
-    background-color: lightcoral;
+  background-color: lightcoral;
 }
 
 .proj2 {
-    background-color: lightgreen;
+  background-color: lightgreen;
 }
 
 .proj3 {
-    background-color: lightslategray; 
+  background-color: lightslategray;
 }
 
 .proj4 {
-    background-color: aquamarine;
+  background-color: aquamarine;
 }
 
 .proj5 {
-    background-color: lightsalmon;
+  background-color: lightsalmon;
 }
 
 .proj6 {
-    background-color: lightpink;
-
+  background-color: lightpink;
 }
 
 .project-names {
-    font-family: 'fairplay display';
-    font-size: 1.2rem;
+  font-family: "fairplay display";
+  font-size: 1.2rem;
 }
 
 .project-details-container {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    padding: 0 1rem 3rem 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 0 1rem 3rem 1rem;
 }
 
 .project-descript {
-    font-family: 'Roboto';
+  font-family: "Roboto";
 }
 
 .name-and-icons {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .footer-background {
-    display: flex;
-    justify-content: center;
-    
-    background-color: rgb(71, 171, 204);
-    width: 100%;
-    
+  display: flex;
+  justify-content: center;
+
+  background-color: rgb(71, 171, 204);
+  width: 100%;
 }
 
 .footer-info {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    max-width: 940px;
-    margin:  3rem;
-    gap: 2rem;
-    color: #D9D9D9;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  max-width: 940px;
+  margin: 3rem;
+  gap: 2rem;
+  color: #d9d9d9;
 }
 
 .contact-title {
-    font-family: 'fairplay display';
-    font-size: 2rem;
+  font-family: "fairplay display";
+  font-size: 2rem;
 }
 
 .contact-info-container {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  list-style: none;
 }
 
 .footer-info-section {
-   display: flex;
-   flex-direction: column;
-   gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .info-and-icon {
-    display: flex;
-    gap: 1rem;
-    align-items: center;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
 }
 
 .footer-img {
-    width: 500px;
-    height: 300px;
-    object-fit: cover;
-    
+  flex-shrink: 2;
+  max-width: 50%;
+  /* max-height: 300px; */
+  object-fit: cover;
 }
 
 .footer-icon-container {
-    display: flex;
-    gap: 1rem;
+  display: flex;
+  gap: 1rem;
 }
 
+@media (min-width: 940px) {
+  .header-content {
+    display: flex;
+    align-items: center;
+  }
+
+  .abt-me-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .img-and-caption {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+  }
+
+  .abt-me-caption {
+    position: absolute;
+
+    color: white;
+
+    z-index: 2;
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 940px) {
+  .header-content {
+    margin-top: 4rem;
+  }
+
+  .man-at-computer {
+    width: 300px;
+    height: 260px;
+    object-fit: cover;
+    position: relative;
+    top: -80px;
+    left: -30px;
+    margin-bottom: -70px;
+  }
+
+  figure {
+    float: left;
+    shape-outside: square();
+    /* margin-right: 1rem; */
+  }
+
+  .abt-me-caption {
+    color: white;
+    position: absolute;
+    top: 1.5rem;
+    left: 270px;
+    font-size: 4rem;
+  }
+
+  .projects-container {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+  }
+
+  .footer-info {
+    max-width: 940px;
+  }
+}
+
+@media (max-width: 600px) {
+  .header-content {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 0;
+  }
+
+  figure {
+    display: flex;
+    max-width: 100%;
+
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .man-at-computer {
+    flex-shrink: 1;
+    max-width: 100%;
+    position: static;
+    top: 0;
+    left: 0;
+    margin-bottom: 0;
+    z-index: 0;
+  }
+
+  .abt-me-caption {
+    font-size: 2rem;
+    flex-shrink: 1;
+    position: relative;
+    margin-top: -3rem;
+
+    left: 0;
+
+    top: 0;
+    flex-shrink: 1;
+  }
+
+  .projects-container {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
+
+  .footer-info {
+    max-width: 500px;
+
+    flex-direction: column;
+  }
+  .footer-img {
+    max-width: 100%;
+  }
+}
